--- a/src/css/Messages.css
+++ b/src/css/Messages.css
@@ -1,7 +1,7 @@
 .messages-container {
   display: flex;
   flex-direction: row;
-  border: solid black 1px;
+  /* border: solid black 1px; */
   height: 95vh;
 }
 
@@ -16,12 +16,38 @@
   justify-content: space-between;
 }
 
+.message-directory-header > h1 {
+  font-weight: bold;
+}
+
 .conversation-list {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
+}
+
+.conversation-list > a:hover {
+  background-color: rgba(177, 172, 171, 0.6);
+  border-radius: 0.625rem;
+  padding: 0.5rem;
 }
 
 .conversation-display {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex-grow: 1;
   padding: 0 2.5vw;
+  border: solid black 1px;
+  border-radius: 0.625rem;
+}
+
+#messages-directory {
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
+  gap: 0.75rem;
+  border: solid black 1px;
+  border-radius: 0.625rem;
 }
